# memtrace

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  requirements.txt  setup.py
lib/include/: memtrace.h
lib/src/: malloc_functions.cpp  tracing.cpp  tracing_internal.h
lib/test/: main.cpp  stack_info.cpp  statistics.cpp
memtrace/: __main__.py  gdb_tracer.py  graph.py  mt_parser.py  parser.py  ptrace.py  report.py  symbolizer.py  template.html  util.py
